* enhance Readme.md about the build and run setup * tinker with the light CSS * enhance panel display